# 003

coursework_one/: .env  Dockerfile  create_db.sql  create_tables.sql  docker-compose.yml  main.py  models.py  public.sql  pyproject.toml  scheduled_csr_automation.py
coursework_one/config/: conf.yaml
coursework_one/modules/db/: db_connection.py  test.py
coursework_one/modules/input/: input_loader.py
coursework_one/modules/output/: script_purposes.py
coursework_one/static/: login.css
coursework_one/templates/: index.html  login.html  reports.html  upload.html
