[project]
name = "team-birch"
version = "0.1.0"
description = ""
authors = [
    {name = "Sherrie.Xu",email = "sherriexu2003@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]

[tool.poetry]
packages = [{include = "team_birch", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.1.0"
flask_sqlalchemy = "^2.5.1"
psycopg2 = "^2.9.3"
minio = "^7.0.2"
PyYAML = "^6.0"
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
